--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Скопируй в .env и заполни значениями
-BOT_TOKEN=123456:ABC-telegram-bot-token
-ADMIN_IDS=123456789              # твой Telegram ID (можно несколько через запятую)
+BOT_TOKEN=8214289852:AAEPapPBKqrMK-dwTi1gKEwMllXcfofrBRw
+ADMIN_IDS=729141214              # твой Telegram ID (можно несколько через запятую)
 DATABASE_PATH=./data/db.sqlite
 OFFERS_PATH=./data/offers.json
 
